--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           type: now
           target_branch: dev
+          message: ${{ github.event.head_commit.message }}
           github_token: ${{ secrets.PERSON_ACCESS_TOKEN }}
