--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,11 +49,11 @@ jobs:
         with:
           repository: ${{ secrets.REPOSITORY }}
           token: ${{ secrets.PERSON_ACCESS_TOKEN }}
-          ref: main
+          ref: app3
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: app3
+          lane: tf3
         env:
           APPLE_KEY_CONTENT: '${{ secrets.APPLE_KEY_CONTENT }}'
           MATCH_PASSWORD: '${{ secrets.MATCH_PASSWORD }}'
