--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
           repository: ${{ secrets.REPOSITORY }}
           token: ${{ secrets.PERSON_ACCESS_TOKEN }}
           ref: main
+      - name: Patch Xcode 15.4
+        uses: 2sem/patch-package-resolved@v1
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
