--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
           repository: ${{ secrets.REPOSITORY }}
           token: ${{ secrets.PERSON_ACCESS_TOKEN }}
           ref: app2
+      - name: Patch Xcode 15.4
+        uses: 2sem/patch-package-resolved@v1
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
@@ -52,6 +54,8 @@ jobs:
           repository: ${{ secrets.REPOSITORY }}
           token: ${{ secrets.PERSON_ACCESS_TOKEN }}
           ref: app3
+      - name: Patch Xcode 15.4
+        uses: 2sem/patch-package-resolved@v1
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
@@ -71,6 +75,8 @@ jobs:
           repository: ${{ secrets.REPOSITORY }}
           token: ${{ secrets.PERSON_ACCESS_TOKEN }}
           ref: app4
+      - name: Patch Xcode 15.4
+        uses: 2sem/patch-package-resolved@v1
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
